# OpenGLProject

./: .clangd  CMakeLists.txt
.cache/clangd/index/: main.cpp.6AF454114CE646A3.idx
shaders/: vertex.glsl
src/: main.cpp
